[FIX] Java 24 dont support SecurityManager